v1/docs/ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel.md
# ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**StorePath** | Pointer to **string** |  | [optional] 
**AgentPool** | Pointer to **string** |  | [optional] 
**IPAddress** | Pointer to **string** |  | [optional] 
**Port** | Pointer to **int32** |  | [optional] 
**NetworkName** | Pointer to **string** |  | [optional] 

## Methods

### NewModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel

`func NewModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel() *ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel`

NewModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel instantiates a new ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewModelsCertificateRetrievalResponseCertificateStoreLocationDetailModelWithDefaults

`func NewModelsCertificateRetrievalResponseCertificateStoreLocationDetailModelWithDefaults() *ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel`

NewModelsCertificateRetrievalResponseCertificateStoreLocationDetailModelWithDefaults instantiates a new ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetStorePath

`func (o *ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel) GetStorePath() string`

GetStorePath returns the StorePath field if non-nil, zero value otherwise.

### GetStorePathOk

`func (o *ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel) GetStorePathOk() (*string, bool)`

GetStorePathOk returns a tuple with the StorePath field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetStorePath

`func (o *ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel) SetStorePath(v string)`

SetStorePath sets StorePath field to given value.

### HasStorePath

`func (o *ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel) HasStorePath() bool`

HasStorePath returns a boolean if a field has been set.

### GetAgentPool

`func (o *ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel) GetAgentPool() string`

GetAgentPool returns the AgentPool field if non-nil, zero value otherwise.

### GetAgentPoolOk

`func (o *ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel) GetAgentPoolOk() (*string, bool)`

GetAgentPoolOk returns a tuple with the AgentPool field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetAgentPool

`func (o *ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel) SetAgentPool(v string)`

SetAgentPool sets AgentPool field to given value.

### HasAgentPool

`func (o *ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel) HasAgentPool() bool`

HasAgentPool returns a boolean if a field has been set.

### GetIPAddress

`func (o *ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel) GetIPAddress() string`

GetIPAddress returns the IPAddress field if non-nil, zero value otherwise.

### GetIPAddressOk

`func (o *ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel) GetIPAddressOk() (*string, bool)`

GetIPAddressOk returns a tuple with the IPAddress field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetIPAddress

`func (o *ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel) SetIPAddress(v string)`

SetIPAddress sets IPAddress field to given value.

### HasIPAddress

`func (o *ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel) HasIPAddress() bool`

HasIPAddress returns a boolean if a field has been set.

### GetPort

`func (o *ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel) GetPort() int32`

GetPort returns the Port field if non-nil, zero value otherwise.

### GetPortOk

`func (o *ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel) GetPortOk() (*int32, bool)`

GetPortOk returns a tuple with the Port field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetPort

`func (o *ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel) SetPort(v int32)`

SetPort sets Port field to given value.

### HasPort

`func (o *ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel) HasPort() bool`

HasPort returns a boolean if a field has been set.

### GetNetworkName

`func (o *ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel) GetNetworkName() string`

GetNetworkName returns the NetworkName field if non-nil, zero value otherwise.

### GetNetworkNameOk

`func (o *ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel) GetNetworkNameOk() (*string, bool)`

GetNetworkNameOk returns a tuple with the NetworkName field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetNetworkName

`func (o *ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel) SetNetworkName(v string)`

SetNetworkName sets NetworkName field to given value.

### HasNetworkName

`func (o *ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel) HasNetworkName() bool`

HasNetworkName returns a boolean if a field has been set.


[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


