v11/docs/ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel.md
# ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**StorePath** | Pointer to **NullableString** |  | [optional] 
**AgentPool** | Pointer to **NullableString** |  | [optional] 
**IpAddress** | Pointer to **NullableString** |  | [optional] 
**Port** | Pointer to **NullableInt32** |  | [optional] 
**NetworkName** | Pointer to **NullableString** |  | [optional] 

## Methods

### NewModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel

`func NewModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel() *ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel`

NewModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel instantiates a new ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewModelsCertificateRetrievalResponseCertificateStoreLocationDetailModelWithDefaults

`func NewModelsCertificateRetrievalResponseCertificateStoreLocationDetailModelWithDefaults() *ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel`

NewModelsCertificateRetrievalResponseCertificateStoreLocationDetailModelWithDefaults instantiates a new ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetStorePath

`func (o *ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel) GetStorePath() string`

GetStorePath returns the StorePath field if non-nil, zero value otherwise.

### GetStorePathOk

`func (o *ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel) GetStorePathOk() (*string, bool)`

GetStorePathOk returns a tuple with the StorePath field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetStorePath

`func (o *ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel) SetStorePath(v string)`

SetStorePath sets StorePath field to given value.

### HasStorePath

`func (o *ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel) HasStorePath() bool`

HasStorePath returns a boolean if a field has been set.

### SetStorePathNil

`func (o *ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel) SetStorePathNil(b bool)`

 SetStorePathNil sets the value for StorePath to be an explicit nil

### UnsetStorePath
`func (o *ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel) UnsetStorePath()`

UnsetStorePath ensures that no value is present for StorePath, not even an explicit nil
### GetAgentPool

`func (o *ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel) GetAgentPool() string`

GetAgentPool returns the AgentPool field if non-nil, zero value otherwise.

### GetAgentPoolOk

`func (o *ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel) GetAgentPoolOk() (*string, bool)`

GetAgentPoolOk returns a tuple with the AgentPool field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetAgentPool

`func (o *ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel) SetAgentPool(v string)`

SetAgentPool sets AgentPool field to given value.

### HasAgentPool

`func (o *ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel) HasAgentPool() bool`

HasAgentPool returns a boolean if a field has been set.

### SetAgentPoolNil

`func (o *ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel) SetAgentPoolNil(b bool)`

 SetAgentPoolNil sets the value for AgentPool to be an explicit nil

### UnsetAgentPool
`func (o *ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel) UnsetAgentPool()`

UnsetAgentPool ensures that no value is present for AgentPool, not even an explicit nil
### GetIpAddress

`func (o *ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel) GetIpAddress() string`

GetIpAddress returns the IpAddress field if non-nil, zero value otherwise.

### GetIpAddressOk

`func (o *ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel) GetIpAddressOk() (*string, bool)`

GetIpAddressOk returns a tuple with the IpAddress field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetIpAddress

`func (o *ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel) SetIpAddress(v string)`

SetIpAddress sets IpAddress field to given value.

### HasIpAddress

`func (o *ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel) HasIpAddress() bool`

HasIpAddress returns a boolean if a field has been set.

### SetIpAddressNil

`func (o *ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel) SetIpAddressNil(b bool)`

 SetIpAddressNil sets the value for IpAddress to be an explicit nil

### UnsetIpAddress
`func (o *ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel) UnsetIpAddress()`

UnsetIpAddress ensures that no value is present for IpAddress, not even an explicit nil
### GetPort

`func (o *ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel) GetPort() int32`

GetPort returns the Port field if non-nil, zero value otherwise.

### GetPortOk

`func (o *ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel) GetPortOk() (*int32, bool)`

GetPortOk returns a tuple with the Port field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetPort

`func (o *ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel) SetPort(v int32)`

SetPort sets Port field to given value.

### HasPort

`func (o *ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel) HasPort() bool`

HasPort returns a boolean if a field has been set.

### SetPortNil

`func (o *ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel) SetPortNil(b bool)`

 SetPortNil sets the value for Port to be an explicit nil

### UnsetPort
`func (o *ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel) UnsetPort()`

UnsetPort ensures that no value is present for Port, not even an explicit nil
### GetNetworkName

`func (o *ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel) GetNetworkName() string`

GetNetworkName returns the NetworkName field if non-nil, zero value otherwise.

### GetNetworkNameOk

`func (o *ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel) GetNetworkNameOk() (*string, bool)`

GetNetworkNameOk returns a tuple with the NetworkName field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetNetworkName

`func (o *ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel) SetNetworkName(v string)`

SetNetworkName sets NetworkName field to given value.

### HasNetworkName

`func (o *ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel) HasNetworkName() bool`

HasNetworkName returns a boolean if a field has been set.

### SetNetworkNameNil

`func (o *ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel) SetNetworkNameNil(b bool)`

 SetNetworkNameNil sets the value for NetworkName to be an explicit nil

### UnsetNetworkName
`func (o *ModelsCertificateRetrievalResponseCertificateStoreLocationDetailModel) UnsetNetworkName()`

UnsetNetworkName ensures that no value is present for NetworkName, not even an explicit nil

[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


